<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cbArroz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arroz" />

        <CheckBox
            android:id="@+id/cbLeite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leite" />

        <CheckBox
            android:id="@+id/cbCarne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carne" />

        <CheckBox
            android:id="@+id/cbFeijao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feijao" />

        <CheckBox
            android:id="@+id/cbRefri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refri" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular_total"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</ScrollView>
